--- a/src/webui/frontend/public/index.html
+++ b/src/webui/frontend/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icons/favicon.ico">
     <link rel="stylesheet" href="/webfonts/hack-subset.css">
 
     <!--
